fix overflow on phones

--- a/src/app.scss
+++ b/src/app.scss
@@ -2,6 +2,7 @@
 
 body {
   background-color: $colorWhite;
+  max-width: 100vw;
 }
 
 .app__loading {
